--- a/style.css
+++ b/style.css
@@ -113,18 +113,9 @@ body {
     color: white;
 }
 
-.choice-container {
-    display: flex;
-    margin-bottom: 12px;
-    margin-top: 10px;
-    width: 100%;
-    background: red;
-    font-size: 30px;
-    border-radius: 10px;
-    min-width: 500px
-}
 
-.choice-container:hover {
+
+.btn:hover {
     cursor: pointer;
     transform: scale(1.02);
     transform: transform 100ms;
@@ -158,8 +149,8 @@ body {
     padding-top: 25px;
 }
 
-.timer {
-    
+#score {
+    font-size: 80px;
 }
 
 .score-num {
@@ -167,5 +158,11 @@ body {
     text-align: center;
 }
 .btn {
-    
+    display: flex;
+    align-items: center;
+    background: rgb(224, 9, 9);
+    border-color: rgb(224, 9, 9);
+    border-style: none;
+    padding-left: 2em;
+    padding-right: 3em;
 }
