--- a/style.css
+++ b/style.css
@@ -166,3 +166,74 @@ body {
     padding-left: 2em;
     padding-right: 3em;
 }
+
+p {
+    font-size: 30px;
+    margin-top: 1rem;
+}
+
+input {
+   padding-top: 5px;
+   margin-top: 1rem;
+   border-radius: 10px;
+   margin-left: .5rem;
+   margin-right: .6rem;
+
+}
+
+#submitBtn {
+    padding-right: 3px;
+    padding-left: 3px;
+    font-size: 20px;
+    border-radius: 10px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+#submitBtn:hover {
+color: red;
+}
+a {
+    font-size: 25px;
+    color: red;
+    
+}
+
+a:hover {
+    color: yellow;
+}
+
+.flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 13rem;
+}
+
+.home {
+    background-color: red;
+    color: whitesmoke;
+    font-size: 40px;
+    padding-top: 3px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 20px;
+    margin-bottom: 2rem;
+}
+
+.home:hover {
+    background-color: yellow;
+    color: black;
+}
+
+.high {
+    color: whitesmoke;
+    font-size: 50px;
+    
+}
+
+#demo {
+    font-size: 25px;
+    margin-top: 20px;
+    color: yellow;
+}
